---
source: crates/tapir-script/compiler/src/compile/optimisations/unused_function_visitor.rs
expression: pretty_printed
input_file: crates/tapir-script/compiler/src/compile/optimisations/snapshot_tests/unused_function/many_unused.tapir
---
# @toplevel: {"FunctionId(0)"}


# {"FunctionId(1)", "UnusedFunction"}
fn first_unused() {
    # {"FunctionId(2)"}
    second_unused();
}

# {"FunctionId(2)", "UnusedFunction"}
fn second_unused() {
    # {"FunctionId(3)"}
    third_unused();
}

# {"FunctionId(3)", "UnusedFunction"}
fn third_unused() {
    wait;
}
